@@ -1,4 +1,8 @@
 2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
+	* src/GrampsDb/_GrampsDbBase.py: copy bookmark list, don't reference
+	* src/GrampsDb/_ReadXML.py: only add bookmarks if not present already, #1187
+
+2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
 	* src/Spell.py: add gtkspell bug workaround, see eg issue 1272, 1091, ...
 
 2007-10-03 Benny Malengier <benny.malengier@gramps-project.org> 
